<resources translatable="false">
    <string name="plug" translatable="false">Текст</string>
    <string name="new_app" translatable="false">vodovoz.ru</string>
    <string name="new_app_ssl_not" translatable="false">http</string>
    <string name="new_app_ssl" translatable="false">https</string>
    <string name="app_name" translatable="false">Vodovoz</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications" translatable="false">Notifications</string>
    <string name="home" translatable="false">Главный</string>
    <string name="catalog" translatable="false">Каталог</string>
    <string name="cart" translatable="false">Корзина</string>
    <string name="favorite" translatable="false">Избранное</string>
    <string name="account" translatable="false">Профиль</string>
    <string name="search_hint" translatable="false">Искать в Vodovoz</string>
    <string name="load_label" translatable="false">Загрузка</string>
    <string name="update_label" translatable="false">Обновить</string>
    <string name="discount" translatable="false">Самое выгодное</string>
    <string name="history_label" translatable="false">Истории</string>
    <string name="popular_label" translatable="false">Популярное</string>
    <string name="about_shop" translatable="false">О магазине</string>
    <string name="about_delivery" translatable="false">О доставке</string>
    <string name="about_pay" translatable="false">Об оплате</string>
    <string name="about_contacts" translatable="false">Связаться с нами</string>
    <string name="about_how_to_order" translatable="false">Как заказать</string>
    <string name="about_services" translatable="false">Услуги</string>
    <string name="about_app" translatable="false">О приложении</string>
    <string name="show_all" translatable="false">СМ.ВСЕ</string>
    <string name="last_purchases" translatable="false">Прошлые покупки</string>
    <string name="additional_navigation_favorite" translatable="false">Избранное</string>
    <string name="additional_navigation_order_history" translatable="false">История заказов</string>
    <string name="brands" translatable="false">Бренды</string>
    <string name="novelty" translatable="false">Новинка</string>
    <string name="novelties" translatable="false">Новинки</string>
    <string name="not_available" translatable="false">Нет в наличии</string>
    <string name="resizable_text_read_more" translatable="false"> подробнее</string>
    <string name="resizable_text_read_less" translatable="false"> свернуть</string>
    <string name="cancel" translatable="false">Отмена</string>
    <string name="confirm" translatable="false">Подтвердить</string>
    <string name="russian_phone_code">+7</string>
    <string name="article" translatable="false">Артикул:</string>
    <string name="depose_price" translatable="false">Залоговая стоимость за бутыль</string>
    <string name="product_absent" translatable="false">Товар закончился</string>
    <string name="default_text" translatable="false">Заглушка для превью</string>
    <string name="price_text" translatable="false">%d ₽</string>
    <string name="telephone" translatable="false">Телефон</string>
    <string name="email" translatable="false">Войти через почту</string>
    <string name="enter_your_phone_number" translatable="false">Укажите номер телефона, чтобы войти или зарегистрироваться, если у вас нет аккаунта.</string>
    <string name="enter_code" translatable="false">Введите код из SMS, отправленный на номер</string>
    <string name="registered_only" translatable="false">Только для зарегистрированных \nпользователей</string>
    <string name="i_confirm_personal_data" translatable="false">Продолжая, вы соглашаетесь с <a href="#">политикой конфиденциальности</a> и с <a href="#">публичной афертой</a></string>
    <string name="subscribe_on_mailing_list" translatable="false">Подписаться на рассылку</string>
    <string name="send_code" translatable="false">Выслать код</string>
    <string name="vvedite_INN" translatable="false">ИНН</string>
    <string name="vvedite_nazvanie" translatable="false">Введите название</string>
    <string name="address_text" translatable="false">Адрес</string>
    <string name="nazvanie_kompanii" translatable="false">Название организации</string>
    <string name="kuda_vopros" translatable="false">Куда?</string>
    <string name="fio_text" translatable="false">ФИО</string>
    <string name="email_text" translatable="false">Email</string>
    <string name="telephone_text" translatable="false">Телефон</string>
    <string name="kogda_vopros" translatable="false">Когда?</string>
    <string name="data_text" translatable="false">Дата</string>
    <string name="vremya_text" translatable="false">Время</string>
    <string name="oplata_text" translatable="false">Оплата</string>
    <string name="choose_pay_system_title" translatable="false">Способ оплаты</string>
    <string name="choose_pay_system_hint" translatable="false">Выберите способ оплаты</string>
    <string name="sdacha_text" translatable="false">С какой суммы нужна сдача?</string>
    <string name="call_title" translatable="false">Вам позвонить?</string>
    <string name="neobhodimoe_deystvie" translatable="false">Выберите необходимое действие</string>
    <string name="zvonok_operatore_text" translatable="false">Требуется звонок оператора</string>
    <string name="predupredit_o_priezde" translatable="false">Предупредить о приезде водителя</string>
    <string name="telephone_dlya_voditelya" translatable="false">Телефон по доставке</string>
    <string name="kommentariy_k_zakazu" translatable="false">Комментарий к заказу</string>
    <string name="kommentariy_dlya_kuriera" translatable="false">Комментарий для курьера</string>
    <string name="tsena_text" translatable="false">Оплата</string>
    <string name="stoimost_tovarov" translatable="false">Стоимость товаров</string>
    <string name="zalog_text" translatable="false">Залог</string>
    <string name="skidka_po_akciyam" translatable="false">Скидка по акциям</string>
    <string name="dostavka_text" translatable="false">Доставка</string>
    <string name="oplata_parkovki" translatable="false">Оплата парковки</string>
    <string name="itogo_text" translatable="false">Итого</string>
    <string name="spasibo_za_zakaz" translatable="false">Спасибо за заказ</string>
    <string name="oplatit_text" translatable="false">Оплатить</string>
    <string name="vozmozhno_vam_ponravitsya" translatable="false">Возможно, вам понравится</string>
    <string name="pokazat_escho" translatable="false">Показать еще</string>
    <string name="kategorii" translatable="false">Категории</string>
    <string name="nastroiki" translatable="false">Настройки</string>
    <string name="sbrosit_dannye" translatable="false">Сбросить данные</string>
    <string name="nastroyki_uvedomleniy" translatable="false">Настройки уведомлений</string>
    <string name="vasha_norma" translatable="false">Ваша норма</string>
    <string name="vashe_pravilnoe_potreblenie" translatable="false">Ваше правильное\nежедневное\nпотребление воды</string>
    <string name="_2500ml" translatable="false">2500мл</string>
    <string name="nachat" translatable="false">Начать</string>
    <string name="vash_pol" translatable="false">Ваш пол</string>
    <string name="dalee" translatable="false">Далее</string>
    <string name="millilitres" translatable="false">%d мл</string>
    <string name="reklama" translatable="false">Реклама</string>
    <string name="from_" translatable="false">От</string>
    <string name="to_" translatable="false">До</string>
    <string name="warn_driver_title" translatable="false">Предупредить о приезде водителя</string>
    <string name="antispam_warn" translatable="false">Уважаемый клиент, мы не дозвонимся до Вас,\nесли установлен АНТИСПАМ.</string>
    <string name="close" translatable="false">Закрыть</string>
    <string name="your_norm" translatable="false">Ваша норма</string>
    <string name="target_daily" translatable="false">Цель ежедневного потребления</string>
    <string name="_200ml" translatable="false">200 мл</string>
    <string name="enter_for_add_water" translatable="false">Нажмите, чтобы добавить воду</string>
    <string name="description" translatable="false">ОПИСАНИЕ</string>
    <string name="characteristics" translatable="false">ХАРАКТЕРИСТИКИ</string>
    <string name="all_characteristics" translatable="false">Все характеристики</string>
    <string name="consumer_information" translatable="false">Потребительская информация</string>
    <string name="do_cancel" translatable="false">Отменить</string>
    <string name="do_repeat" translatable="false">Повторить</string>
    <string name="do_pay" translatable="false">Оплатить</string>
    <string name="info_about_order" translatable="false">Информация о заказе</string>
    <string name="recipient" translatable="false">Получатель</string>
    <string name="load_photo" translatable="false">Загрузить фото</string>
    <string name="personal_data" translatable="false">Личные данные</string>
    <string name="name" translatable="false">Имя</string>
    <string name="last_name" translatable="false">Фамилия</string>
    <string name="name_hint" translatable="false">Введите имя</string>
    <string name="family_hint" translatable="false">Введите фамилию</string>
    <string name="sex_hint" translatable="false">Пол</string>
    <string name="sex_male" translatable="false">Мужской</string>
    <string name="bithday_hint" translatable="false">Дата рождения</string>
    <string name="phone_hint" translatable="false">Телефон</string>
    <string name="change_password" translatable="false">Изменение пароля</string>
    <string name="new_password_hint" translatable="false">Новый пароль</string>
    <string name="save" translatable="false">Сохранить</string>
    <string name="example_mail_com" translatable="false">example@mail.com</string>
    <string name="fill_value" translatable="false">Заполнить</string>
    <string name="send" translatable="false">Отправить</string>
    <string name="buy" translatable="false">Купить</string>
    <string name="logout" translatable="false">Выйти из аккаунта</string>
    <string name="repeat" translatable="false">Повторить</string>
    <string name="details" translatable="false">Подробнее</string>
    <string name="choose_sort" translatable="false">Выбрать сортировку</string>
    <string name="confirm_personal_data" translatable="false">Я подтверждаю свое согласие на <a href="#">обработку персональных данных </a></string>
    <string name="order_history" translatable="false">История заказов</string>
    <string name="categories" translatable="false">Категории</string>
    <string name="choose_sort_type" translatable="false">Выбрать сортировку</string>
    <string name="no_products_available" translatable="false">Товары в заказе отсутствуют</string>
    <string name="goods_of_promotion" translatable="false">Товары участвующие в акции:</string>
    <string name="search_" translatable="false">Поиск...</string>
    <string name="clear_search" translatable="false">Clear search</string>
    <string name="enter_phone" translatable="false">Введите телефон</string>
    <string name="phone" translatable="false">Телефон</string>
    <string name="phone_" translatable="false">Телефон*</string>
    <string name="enter_email" translatable="false">Введите E-mail</string>
    <string name="email_title" translatable="false">E-mail</string>
    <string name="address_title" translatable="false">Адрес</string>
    <string name="fio_" translatable="false">ФИО*</string>
    <string name="email_title_" translatable="false">Почта*</string>
    <string name="email_" translatable="false">Почта*</string>
    <string name="delete_account_confirmation">Вы действительно хотите удалить аккаунт?</string>
    <string name="delete">Удалить</string>
</resources>