<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/png_ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/catalogFragment"
        android:icon="@drawable/png_ic_catalog"
        android:title="@string/catalog" />

    <item
        android:id="@+id/cartFragment"
        android:icon="@drawable/png_cart"
        android:title="@string/cart" />

    <item
        android:id="@+id/favoriteFragment"
        android:icon="@drawable/png_ic_favorite"
        android:title="@string/favorite" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/png_ic_account"
        android:title="@string/account" />

</menu>