<?xml version="1.0" encoding="utf-8"?>
<!--new(nr)-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/space_8"
    android:layout_marginHorizontal="@dimen/space_16">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/aboutShop"
        style="@style/TextViewNormalGray"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_25sdp"
        android:text="@string/about_shop"
        android:gravity="center_vertical"
        android:drawableEnd="@drawable/ic_pointer_right"
        tools:ignore="UseCompatTextViewDrawableXml"/>

    <TextView
        android:id="@+id/aboutDelivery"
        style="@style/TextViewNormalGray"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_25sdp"
        android:text="@string/about_delivery"
        android:gravity="center_vertical"
        android:drawableEnd="@drawable/ic_pointer_right"
        tools:ignore="UseCompatTextViewDrawableXml"/>

    <TextView
        android:id="@+id/aboutPay"
        style="@style/TextViewNormalGray"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_25sdp"
        android:text="@string/about_pay"
        android:gravity="center_vertical"
        android:drawableEnd="@drawable/ic_pointer_right"
        tools:ignore="UseCompatTextViewDrawableXml"/>

    <TextView
        android:id="@+id/contacts"
        style="@style/TextViewNormalGray"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_25sdp"
        android:text="@string/about_contacts"
        android:gravity="center_vertical"
        android:drawableEnd="@drawable/ic_pointer_right"
        tools:ignore="UseCompatTextViewDrawableXml"/>

    <TextView
        android:id="@+id/howToOrder"
        style="@style/TextViewNormalGray"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_25sdp"
        android:text="@string/about_how_to_order"
        android:gravity="center_vertical"
        android:drawableEnd="@drawable/ic_pointer_right"
        tools:ignore="UseCompatTextViewDrawableXml"/>

    <TextView
        android:id="@+id/services"
        style="@style/TextViewNormalGray"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_25sdp"
        android:text="@string/about_services"
        android:gravity="center_vertical"
        android:drawableEnd="@drawable/ic_pointer_right"
        tools:ignore="UseCompatTextViewDrawableXml"/>

    <TextView
        android:id="@+id/aboutApp"
        style="@style/TextViewNormalGray"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_25sdp"
        android:text="@string/about_app"
        android:gravity="center_vertical"
        android:drawableEnd="@drawable/ic_pointer_right"
        tools:ignore="UseCompatTextViewDrawableXml" />

</LinearLayout>