<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:background="@drawable/bg_alert_dialog"
        android:elevation="10dp"
        android:orientation="vertical"
        android:translationZ="8dp"
        tools:ignore="UselessParent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:paddingVertical="8dp"
            android:paddingEnd="8dp"
            tools:ignore="RtlSymmetry">


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTitle"
                android:layout_width="224dp"
                android:layout_height="wrap_content"
                android:text="Title"
                android:textAppearance="@style/TextAppearance.Vodovoz.Headline7"
                android:textColor="@color/text_black_composable" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvDescription"
                android:layout_width="224dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/delete_account_confirmation"
                android:textAppearance="@style/TextAppearance.Vodovoz.Body2"
                android:textColor="@color/text_grey_composable" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnNegative"
                android:background="@drawable/bg_round_corner_border_transparent"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:minWidth="0dp"
                android:paddingHorizontal="8dp"
                android:text="@string/cancel"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.Vodovoz.Button2"
                android:textColor="@color/new_product_blue" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnPositive"
                android:background="@drawable/bg_round_corner_border_transparent"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:minWidth="0dp"
                android:paddingHorizontal="8dp"
                android:text="@string/delete"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.Vodovoz.Button2"
                android:textColor="@color/new_product_blue" />

        </LinearLayout>

    </LinearLayout>
</FrameLayout>
