<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <include
        android:id="@+id/incHeader"
        layout="@layout/view_popup_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgProduct"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_120sdp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/space_16"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mdDivider"
                app:layout_constraintWidth_percent="0.5" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvName"
                style="@style/TextViewMediumBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="@dimen/space_16"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="@+id/imgProduct"
                app:layout_constraintStart_toStartOf="@+id/imgProduct"
                app:layout_constraintTop_toBottomOf="@+id/imgProduct"
                tools:text="Название продукта" />

                <EditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@color/white"
                    android:hint="@string/fio_"
                    android:inputType="text"
                    android:textSize="14sp"
                    android:paddingStart="32dp"
                    android:textColor="#555555"
                    app:fontFamily="@font/rotonda_normal"
                    android:textStyle="normal"
                    android:textAllCaps="false" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="16dp" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@color/white"
                android:hint="@string/email_"
                android:inputType="textEmailAddress"
                android:textSize="14sp"
                android:paddingStart="32dp"
                android:textColor="#555555"
                app:fontFamily="@font/rotonda_normal"
                android:textStyle="normal"
                android:textAllCaps="false" />


            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="16dp" />


            <EditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@color/white"
                android:hint="@string/phone_"
                android:inputType="text"
                android:textSize="14sp"
                android:paddingStart="32dp"
                android:textColor="#555555"
                app:fontFamily="@font/rotonda_normal"
                android:textStyle="normal"
                android:textAllCaps="false" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="16dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSend"
                style="@style/BlueButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_normal_height"
                android:layout_marginHorizontal="@dimen/space_16"
                android:layout_marginTop="@dimen/space_16"
                android:layout_marginBottom="@dimen/space_16"
                android:text="@string/send"
                android:textStyle="normal"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>